qualcosa si sta muovendo

--- a/index.html
+++ b/index.html
@@ -21,15 +21,13 @@
         </script>
     </head>
     <body>
-	   <p>Show me something</p>
-	   <p id="num"></p>
-     <p>
-     Write something<br/>
+	  Write command<br/>
      <tr>
 		  <td> <input type="text" id="testo" onclick="stopRefresh()"></td>
 		  <td> <button type="button" onclick="send()">Send</button></td>
 		</tr>
-     End
-     </p>
+    <p>Response</p>
+    <p id="num"></p>
+    <p>
 </body>
 </html>
