--- a/index.html
+++ b/index.html
@@ -1,33 +1,52 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <!-- jQuery library -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <!-- Latest compiled JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <link rel = "stylesheet" type = "text/css" href = /style.css>
         <title>Test</title>
         <script>
   			var socket = new WebSocket( "ws://" + document.domain + ':' + location.port, "example-protocol" );
-  			refresh_toggled=true;
-        function update(msg) { document.getElementById("num").innerHTML = msg; }
+        function update(msg) { document.getElementById("data").innerHTML = msg; }
         socket.onopen = function() { console.log("socket open"); update("open"); }
         socket.onclose = function() { console.log("socket close"); update("closed"); }
         socket.onmessage = function(msg) { console.log("socket message: " + msg.data); update(msg.data); }
 
 				function send(){
 					socket.send(document.getElementById('testo').value);
-					refresh_toggled=true;
 				}
-
-				function stopRefresh(){
- 			   	refresh_toggled=false;
-				}
+        function pressed(e) {
+            // Has the enter key been pressed?
+            if ( (window.event ? event.keyCode : e.which) == 13) {
+                // If it has been so, manually submit the <form>
+                send();
+            }
+        }
         </script>
     </head>
     <body>
-	  Write command<br/>
-     <tr>
-		  <td> <input type="text" id="testo" onclick="stopRefresh()"></td>
-		  <td> <button type="button" onclick="send()">Send</button></td>
-		</tr>
-    <p>Response</p>
-    <p id="num"></p>
-    <p>
+      <div class="container">
+       <div class="row">
+             <div class="col-sm-6 col-sm-offset-3">
+                 <div id="imaginary_container">
+                     <div class="input-group stylish-input-group">
+                         <input type="text" class="form-control" id="testo"  placeholder="Type command" onkeydown="pressed(event)">
+                         <span class="input-group-addon">
+                             <button type="button" onclick="send()">
+                                 <span class="glyphicon glyphicon-send"></span>
+                             </button>
+                         </span>
+                     </div>
+                 </div>
+             </div>
+       </div>
+       <div class="p">
+         <p id="data"></p>
+       </div>
+      </div>
 </body>
 </html>
